--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
     <body>
         What it is, what it do? It's yah boy Aaron "A.C." Wright, cuz I always keep it cool (freezing emoji)
+        <h1> <strong>This is my resume. Just a lil sumthn light, nothing too much</strong></h1>
+
+        <p>
+        
+        </p>
     </body>
     
 </html>
