--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Aaron Wright's Resume</title>
+        <body>
+        <title>A.C.'s Resume</title>
+        <h1>Aaron Wright</h1>
+        <strong>The One and Only Journalist Extraordinaire</strong>
+        <ul>
+            <link> aaroncarter.wright@gmail.com</link>
+            <li><a href="https://www.linkedin.com/in/aaron-wright-a01b391a7/">Linkedin</a></li>
+            <li><a href="https://twitter.com/WrightAaronC">X (Formerly known as Twitter)</a></li>
+            <li><a href="https://github.com/WrightAaronC">Github</a></li>
+
+        </ul>
+        <p> I am a journalist with projects across digital, print and audio formats. I'm a "Jack of all trades" when it comes to journalism!</p>
+
+        <h2>Experience</h2>
+
+        <h3>Newsroom Intern</h3>
+        <h4>The Baltimore Banner</h4>
+        <h5>June 2022 - August 2022</h5>
+        <p>As newsroom intern and part of the first Baltimore Banner internship cohort, I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
+
+        <h3></h3>
+        <h4></h4>
+        <h5></h5>
+        <p></p>
+
+        <h3></h3>
+        <h4></h4>
+        <h5></h5>
+        <p></p>
+
+
+
+
+
+
+        </body>
+
+        
     </head>
 </html>
