--- a/resume/index.html
+++ b/resume/index.html
@@ -5,11 +5,7 @@
     
     <title>A.C.'s Resume</title>
 
-    <style type="text/css">
-    h1 {
-        font-size: 36px;
-        color:#33485e;
-    }
+    <link rel="stylesheet" href="style.css"
     </style>
 
 </head>
