--- a/resume/index.html
+++ b/resume/index.html
@@ -5,8 +5,7 @@
     
     <title>A.C.'s Resume</title>
 
-    <link rel="stylesheet" href="style.css"
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
