--- a/resume/index.html
+++ b/resume/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+
+    <link rel="stylesheet" href="style.css">
+    
         <!-- I BUILT THIS MYSELF! -->
         <h1>Aaron Wright</h1>
 
