--- a/resume/index.html
+++ b/resume/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
+<link rel="stylesheet" href="style.css">
 <head>
     
     <title>A.C.'s Resume</title>
-
-    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-    <link rel="stylesheet" href="style.css">
-    
         <!-- I BUILT THIS MYSELF! -->
         <h1>Aaron Wright</h1>
 
