--- a/resume/index.html
+++ b/resume/index.html
@@ -12,7 +12,9 @@
         <!-- I BUILT THIS MYSELF! -->
         <h1>Aaron Wright</h1>
 
-        <p><strong>The One and Only Journalist Extraordinaire</strong></p>
+        <div id="title">
+            <p>The One and Only Journalist Extraordinaire</p>
+        </div>
         
         <ul>
             <li>aaroncarter.wright@gmail.com</li>
