--- a/resume/index.html
+++ b/resume/index.html
@@ -11,11 +11,7 @@
     <link rel="stylesheet" href="style.css">
         <!-- I BUILT THIS MYSELF! -->
         <h1>Aaron Wright</h1>
-
-        <div id="title">
-            <p>The One and Only Journalist Extraordinaire</p>
-        </div>
-        
+ 
         <ul>
             <li>aaroncarter.wright@gmail.com</li>
             <li><a href="https://www.linkedin.com/in/aaron-wright-a01b391a7/">Linkedin</a></li>
@@ -23,7 +19,9 @@
             <li><a href="https://github.com/WrightAaronC">Github</a></li>
 
         </ul>
-        
+        <div id="title">
+            The One and Only Journalist Extraordinaire
+        </div>
         <p> I am a journalist with projects across digital, print and audio formats. I'm a "Jack of all trades" when it comes to journalism!</p>
 
         <h2>Experience</h2>
