--- a/resume/index.html
+++ b/resume/index.html
@@ -43,7 +43,7 @@
 
         <h2>Education</h2>
         
-        <h3>Bachelors of Journalism, Multimedia Journalism, University of Maryland, 2024</h3>
+        <p>Bachelors of Journalism, Multimedia Journalism, University of Maryland, 2024</p>
 
         <h2>Skills</h2>
         <ul>
