--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,9 @@
 <body>
     <link rel="stylesheet" href="style.css">
         <!-- I BUILT THIS MYSELF! -->
-        <h1>Aaron Wright</h1>
+        <div id="name">
+            <h1>Aaron Wright</h1>
+        </div>
  
         <ul>
             <li>aaroncarter.wright@gmail.com</li>
