--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
         <!-- I BUILT THIS MYSELF! -->
         <div id="name">
-            <h1>Aaron Wright</h1>
+            Aaron Wright
         </div>
  
         <ul>
