--- a/resume/index.html
+++ b/resume/index.html
@@ -24,19 +24,23 @@
         <div id="title">
             The One and Only Journalist Extraordinaire
         </div>
-        <p> I am a journalist with projects across digital, print and audio formats. I'm a "Jack of all trades" when it comes to journalism!</p>
+        <p> I am a journalist with projects across digital, print and audio formats. 
+            I'm a "Jack of all trades" when it comes to journalism!
+        </p>
 
         <h2>Experience</h2>
 
         <h3>Newsroom Intern</h3>
         <h4>The Baltimore Banner</h4>
         <h5>June 2022 - August 2022</h5>
-        <p>As newsroom intern and part of the first Baltimore Banner internship cohort, I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
+        <p>As newsroom intern and part of the first Baltimore Banner internship cohort, 
+            I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
 
         <h3>Staff Writer</h3>
         <h4>The Black Explosion</h4>
         <h5>September 2021 - August 2023</h5>
-        <p>The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland by covering the stories that matter to the community. As a staff writer for the Black Explosion, I reported on various campus events and conducted interviews with students to create stories for Black UMD, delivered story pitches to editors for further consideration and photographed pictures for stories to use as graphics.</p>
+        <p>The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland
+            by covering the stories that matter to the community. As a staff writer for the Black Explosion, I reported on various campus events and conducted interviews with students to create stories for Black UMD, delivered story pitches to editors for further consideration and photographed pictures for stories to use as graphics.</p>
 
         <h3>Staff Writer and Anchor</h3>
         <h4>WMUC-FM Radio News</h4>
