Update of my HTML website

--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,9 @@
             I'm a "Jack of all trades" when it comes to journalism!
         </p>
 
-        <h2>Experience</h2>
+        <div id="sectionheader">
+            <p>Experience</p>
+        </div>
 
         <h3>Newsroom Intern</h3>
         <h4>The Baltimore Banner</h4>
