--- a/resume/index.html
+++ b/resume/index.html
@@ -28,7 +28,7 @@
             I'm a "Jack of all trades" when it comes to journalism!
         </p>
 
-        <div id="sectionheader">
+        <div class="sectionheader">
             <p>Experience</p>
         </div>
 
