--- a/resume/index.html
+++ b/resume/index.html
@@ -32,21 +32,21 @@
             <p>Experience</p>
         </div>
 
-        <h3>Newsroom Intern</h3>
-        <h4>The Baltimore Banner</h4>
-        <h5>June 2022 - August 2022</h5>
+        <h3 class="jobtitle">Newsroom Intern</h3>
+        <h4 class="organization">The Baltimore Banner</h4>
+        <h5 class="date">June 2022 - August 2022</h5>
         <p>As newsroom intern and part of the first Baltimore Banner internship cohort, 
             I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
 
-        <h3>Staff Writer</h3>
-        <h4>The Black Explosion</h4>
-        <h5>September 2021 - August 2023</h5>
+        <h3 class="jobtitle">Staff Writer</h3>
+        <h4 class="organization">The Black Explosion</h4>
+        <h5 class="date">September 2021 - August 2023</h5>
         <p>The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland
             by covering the stories that matter to the community. As a staff writer for the Black Explosion, I reported on various campus events and conducted interviews with students to create stories for Black UMD, delivered story pitches to editors for further consideration and photographed pictures for stories to use as graphics.</p>
 
-        <h3>Staff Writer and Anchor</h3>
-        <h4>WMUC-FM Radio News</h4>
-        <h5>February 2021 - January 2023</h5>
+        <h3 class="jobtitle">Staff Writer and Anchor</h3>
+        <h4 class="organization">WMUC-FM Radio News</h4>
+        <h5 class="date">February 2021 - January 2023</h5>
         <p>WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
 
         <h2>Education</h2>
