--- a/resume/index.html
+++ b/resume/index.html
@@ -49,11 +49,11 @@
         <h5 class="date">February 2021 - January 2023</h5>
         <p>WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
 
-        <h2>Education</h2>
+        <div class="sectionheader">Education</div>
         
         <p>Bachelors of Journalism, Multimedia Journalism, University of Maryland, 2024</p>
 
-        <h2>Skills</h2>
+        <div class="sectionheader">Skills</div>
         <ul>
             <li>Experience with Adobe Premiere Pro and Audition.</li>
             <li>Great writing skills (examples can be given upon request).</li>
