--- a/resume/index.html
+++ b/resume/index.html
@@ -14,7 +14,7 @@
             Aaron Wright
         </div>
  
-        <ul>
+        <ul class="menu">
             <li>aaroncarter.wright@gmail.com</li>
             <li><a href="https://www.linkedin.com/in/aaron-wright-a01b391a7/">Linkedin</a></li>
             <li><a href="https://twitter.com/WrightAaronC">X (Formerly known as Twitter)</a></li>
@@ -24,7 +24,7 @@
         <div id="title">
             The One and Only Journalist Extraordinaire
         </div>
-        <p> I am a journalist with projects across digital, print and audio formats. 
+        <p class="description"> I am a journalist with projects across digital, print and audio formats. 
             I'm a "Jack of all trades" when it comes to journalism!
         </p>
 
@@ -35,23 +35,23 @@
         <div class="jobtitle">Newsroom Intern</div>
         <div class="organization">The Baltimore Banner</div>
         <div class="date">June 2022 - August 2022</div>
-        <p>As newsroom intern and part of the first Baltimore Banner internship cohort, 
+        <p class="description">As newsroom intern and part of the first Baltimore Banner internship cohort, 
             I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
 
         <div class="jobtitle">Staff Writer</div>
         <div class="organization">The Black Explosion</div>
         <div class="date">September 2021 - August 2023</div>
-        <p>The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland
+        <p class="description">The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland
             by covering the stories that matter to the community. As a staff writer for the Black Explosion, I reported on various campus events and conducted interviews with students to create stories for Black UMD, delivered story pitches to editors for further consideration and photographed pictures for stories to use as graphics.</p>
 
         <div class="jobtitle">Staff Writer and Anchor</div>
         <div class="organization">WMUC-FM Radio News</div>
         <div class="date">February 2021 - January 2023</div>
-        <p>WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
+        <p class="description">WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
 
         <div class="sectionheader">Education</div>
         
-        <p>Bachelors of Journalism, Multimedia Journalism, University of Maryland, 2024</p>
+        <p class="description">Bachelors of Arts, Multimedia Journalism, University of Maryland, 2024</p>
 
         <div class="sectionheader">Skills</div>
         <ul>
