--- a/resume/index.html
+++ b/resume/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<div id="container">
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
@@ -21,10 +22,11 @@
             <li><a href="https://github.com/WrightAaronC">Github</a></li>
 
         </ul>
+        <!-- THE TITLE AND DESCRIPTION ALL HAVE UNIQUE ID'S-->
         <div id="title">
             The One and Only Journalist Extraordinaire
         </div>
-        <p class="description"> I am a journalist with projects across digital, print and audio formats. 
+        <p class="top"> I am a journalist with projects across digital, print and audio formats. 
             I'm a "Jack of all trades" when it comes to journalism!
         </p>
 
@@ -64,3 +66,4 @@
 
 </body>
 </html>
+</div>
