--- a/resume/index.html
+++ b/resume/index.html
@@ -52,7 +52,7 @@
         <p class="description">WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
 
         <div class="sectionheader">Education</div>
-        
+        <!--THERE'S NO LIST BECAUSE I NEVER WENT TO GRADUATE SCHOOL-->
         <p class="description">Bachelors of Arts, Multimedia Journalism, University of Maryland, 2024</p>
 
         <div class="sectionheader">Skills</div>
