--- a/resume-deluxe/index.html
+++ b/resume-deluxe/index.html
@@ -102,5 +102,15 @@
     </div>
   </div>
   <!--Grid ending-->
+
+  <style>
+    .bi {
+      font-size:3em;
+    }
+   
+    .col-md-4 {
+      text-align: center;
+    }
+   </style>
     </body>
 </html>
