--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -52,6 +52,14 @@
   <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
     <!-- Navbar content -->
   </nav>
+  
+  <nav class="navbar bg-primary" data-bs-theme="dark">
+    <!-- Navbar content -->
+  </nav>
+  
+  <nav class="navbar" style="background-color: #e3f2fd;">
+    <!-- Navbar content -->
+  </nav>
   <!-- Navbar end-->
 
   <!-- Hero start-->
