--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -27,7 +27,7 @@
     <body>
 
         <!-- Navbar start-->
- <nav class="navbar navbar-expand-lg bg-body-tertiary">
+ <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Skate! Newsletter</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,18 +47,6 @@
         </ul>
       </div>
     </div>
-  </nav>
-
-  <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
-    <!-- Navbar content -->
-  </nav>
-  
-  <nav class="navbar bg-primary" data-bs-theme="dark">
-    <!-- Navbar content -->
-  </nav>
-  
-  <nav class="navbar" style="background-color: #e3f2fd;">
-    <!-- Navbar content -->
   </nav>
   <!-- Navbar end-->
 
