--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -66,8 +66,7 @@
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+          <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Primary</button>
         </div>
       </div>
     </div>
@@ -79,20 +78,14 @@
     <div class="row">
   
   
-      <div class="col-md-4">
+      <div class="col-md-1">
         <h3>Heading 1</h3>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
       </div>
   
-      <div class="col-md-4">
+      <div class="col-md-1">
         <h3>Heading 2</h3>
         <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
-      </div>
-  
-  
-      <div class="col-md-4">
-        <h3>Heading 3</h3>
-        <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
       </div>
     </div>
   </div>
