--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -57,7 +57,8 @@
         <img src="https://images.unsplash.com/photo-1564982752979-3f7bc974d29a?ixid=MnwxMj
         A3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit
         =crop&w=334&q=80" 
-        class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+        class="d-block mx-lg-auto img-fluid" 
+        alt="Bootstrap Themes" width="700" height="500" loading="lazy">
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">A rundown of top new skateboard decks</h1>
@@ -76,15 +77,18 @@
   <!--Grid beginning-->
   <div class="container">
     <div class="row">
-  
-  
-      <div class="col-md-1">
-        <h3>Heading 1</h3>
+    
+      <div class="col-md-6">
+        <h2>This is bro</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <img src="https://images.unsplash.com/photo-1572776685600-
+        aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYW
+        dlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80"
+        width="100%" width-max="500px"
       </div>
   
-      <div class="col-md-1">
-        <h3>Heading 2</h3>
+      <div class="col-md-6">
+        <h2>Check out bro</h2>
         <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
       </div>
     </div>
@@ -100,5 +104,10 @@
       text-align: center;
     }
    </style>
+   <footer class="footer mt-auto py-3 bg-dark">
+      <div class="container">
+        <span class="text-muted">This is a bootstrap exercise</span>
+      </div>
+   </footer>
     </body>
 </html>
