--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -67,7 +67,7 @@
           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Primary</button>
+          <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button>
         </div>
       </div>
     </div>
@@ -84,12 +84,42 @@
         <img src="https://images.unsplash.com/photo-1572776685600-
         aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYW
         dlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80"
-        width="100%" width-max="500px"
+        width="100%" width-max="500px">
+        <button type="button" class="btn btn-dark">Read now</button>
       </div>
   
       <div class="col-md-6">
         <h2>Check out bro</h2>
         <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
+        <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwa
+        G90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
+        width="100%" width-max="500px">
+        <button type="button" class="btn btn-dark">Read now</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      
+      <div class="col-md-4">
+        <i class="bi bi-heart-fill"></i>
+        </svg>
+        <h3>Read</h3>
+        <p>Read our stories here</p>
+      </div>
+
+      <div class="col-md-4">
+        <i class="bi bi-three-dots"></i>
+        </svg>
+        <h3>Contact</h3>
+        <p>Ask us a question</p>
+      </div>
+
+      <div class="col-md-4">
+        <i class="bi bi-heart-fill"></i>
+        <h3>Follow</h3>
+        <p>Follow us on Facebook or X</p>
       </div>
     </div>
   </div>
@@ -100,6 +130,10 @@
       font-size:3em;
     }
    
+    .col-md-6 {
+      text-align: center;
+    }
+
     .col-md-4 {
       text-align: center;
     }
