--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -19,8 +19,23 @@
         <link rel="stylesheet" 
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
+      <style>
+        .bi {
+          font-size:3em;
+        }
+       
+        .col-md-6 {
+          text-align: center;
+        }
+    
+        .col-md-4 {
+          text-align: center;
+        }
 
-
+        h1 {
+          font-family: ;
+        }
+       </style>
     </head>
 
 
@@ -81,9 +96,7 @@
       <div class="col-md-6">
         <h2>This is bro</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <img src="https://images.unsplash.com/photo-1572776685600-
-        aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYW
-        dlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80"
+        <img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80"
         width="100%" width-max="500px">
         <button type="button" class="btn btn-dark">Read now</button>
       </div>
@@ -125,19 +138,6 @@
   </div>
   <!--Grid ending-->
 
-  <style>
-    .bi {
-      font-size:3em;
-    }
-   
-    .col-md-6 {
-      text-align: center;
-    }
-
-    .col-md-4 {
-      text-align: center;
-    }
-   </style>
    <footer class="footer mt-auto py-3 bg-dark">
       <div class="container">
         <span class="text-muted">This is a bootstrap exercise</span>
