--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -18,10 +18,13 @@
 
         <link rel="stylesheet" 
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
       <style>
         .bi {
           font-size:3em;
+          font-family: Special Elite, Arial, Helvetica, sans-serif;
         }
        
         .col-md-6 {
@@ -33,8 +36,21 @@
         }
 
         h1 {
-          font-family: ;
+          font-family: Special Elite, Arial, Helvetica, sans-serif;
         }
+
+        h2 {
+          font-family: Special Elite, Arial, Helvetica, sans-serif;
+        }
+
+        h3 {
+          font-family: Special Elite, Arial, Helvetica, sans-serif;
+        }
+
+        .navbar-brand {
+          font-family: Special Elite, Arial, Helvetica, sans-serif;
+        }
+
        </style>
     </head>
 
