--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -51,6 +51,14 @@
           font-family: Special Elite, Arial, Helvetica, sans-serif;
         }
 
+        
+   @media only screen and (max-width: 500px) {
+    h2 {
+      padding-top: 50px;
+    }
+    
+}
+
        </style>
     </head>
 
