--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -51,6 +51,10 @@
           font-family: Special Elite, Arial, Helvetica, sans-serif;
         }
 
+        .btn {
+          font-family: Special Elite, Arial, Helvetica, sans-serif;
+        }
+
         
    @media only screen and (max-width: 500px) {
     h2 {
