--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<html lang="en">
-
-    <head>
-        <title>Aaron C. Wright</title>
+<html>
+ 
+    <head> 
+        <title>Aaron's Test Page</title>
     </head>
-
-    <body>
-        What it is, what it do? It's yah boy Aaron "A.C." Wright, cuz I always keep it cool (freezing emoji)
-        <h1> <strong>This is my resume. Just a lil sumthn light, nothing too much</strong></h1>
-
-        <p>
-        </p>
-    </body>
     
+    <body> 
+        Hello World! - Aaron Wright
+    </body>
+
+
+
 </html>
