--- a/resume 2.0/index.html
+++ b/resume 2.0/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
+    <head>
     <title>Aaron Wright's Resume</title>
-</head>
 
-<body>
+    <style type="text/css">
+
+        h1 {
+            font-size: 36px;
+            color: #33485e;
+        }
+
+    </style>
+
+    </head>
+
+
+    <body>
 <!--I built this myself! Again!-->
     <h1>Aaron Wright</h1>
     <strong>Print and Audio Journalist</strong>
@@ -63,17 +74,18 @@
     Black topics.</p>
     
     <h2>Education</h2>
-        <ul>
-            <li>Bachelor of Arts, Journalism, University of Maryland, 2024</li>
-            <li>Certificate in African American and Africana Studies, University of Maryland, 2024</li>
-        </ul>
+    <ul>
+        <li>Bachelor of Arts, Journalism, University of Maryland, 2024</li>
+        <li>Certificate in African American and Africana Studies, University of Maryland, 2024</li>
+    </ul>
     
     <h2>Skills</h2>
-        <ul>
-            <li></li>Experience with Adobe Premiere Pro and Audition.
-            <li>Great writing skills (examples can be given upon request).
-            <li>Knowledge on how to conduct research and use databases.
-            <li>Really funny guy (in a dry way)
-        </ul> 
-</body>
+    <ul>
+        <li>Experience with Adobe Premiere Pro and Audition.</li>
+        <li>Great writing skills (examples can be given upon request).</li>
+        <li>Knowledge on how to conduct research and use databases.</li>
+        <li>Really funny guy (in a dry way)</li>
+    </ul> 
+
+    </body>
 </html>
