This is for the sake of a better resume!

--- a/resume/index.html
+++ b/resume/index.html
@@ -16,7 +16,7 @@
         </div>
  
         <ul class="menu">
-            <li>aaroncarter.wright@gmail.com</li>
+            <li><a href="mailto:aaroncarter.wright@gmail.com">aaroncarter.wright@gmail.com</a></li>
             <li><a href="https://www.linkedin.com/in/aaron-wright-a01b391a7/">Linkedin</a></li>
             <li><a href="https://twitter.com/WrightAaronC">X (Formerly known as Twitter)</a></li>
             <li><a href="https://github.com/WrightAaronC">Github</a></li>
@@ -52,8 +52,11 @@
         <p class="description">WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
 
         <div class="sectionheader">Education</div>
-        <!--THERE'S NO LIST BECAUSE I NEVER WENT TO GRADUATE SCHOOL-->
-        <p class="description">Bachelors of Arts, Multimedia Journalism, University of Maryland, 2024</p>
+      <!--THIS TIME THERE IS A LIST!-->
+        <ul id="do">
+            <li class="description">Bachelor of Arts, Journalism, University of Maryland, 2024</li>
+            <li class="description">Certificate in African American and Africana Studies, University of Maryland, 2024</li>
+        </ul>
 
         <div class="sectionheader">Skills</div>
         <ul id="do">
