--- a/Midterm 2.0/index.html
+++ b/Midterm 2.0/index.html
@@ -63,6 +63,15 @@
 <h6>Hair by Malcolm Marquez at OPUS Beauty; makeup by Deanna Paley; manicure by Chaun Legend for The Only Agency; set design by Daniel Horowitz at Jones MGMT; produced by Carina Mak at Ice Studios.</h6>
 <h6>This article appears in the June/July 2023 issue of ELLE."</h6>
 
+<iframe
+style="border-radius:12px"
+src="https://open.spotify.com/embed/album/07w0rG5TETcyihsEIZR3qG?utm_source=g
+enerator"
+width="100%" height="352" frameBorder="0" allowfullscreen=""
+allow="autoplay; clipboard-write; encrypted-media; fullscreen;
+picture-in-picture" loading="lazy"></iframe>
+
+
     <li>
         <a href="https://www.elle.com/fashion/a44109424/project-runway-season-20-cast-all-star-design
         ers/"> Meet the All-Star Cast of Project Runway Season 20</a>
