For the masthead

--- a/Midterm 2.0/index.html
+++ b/Midterm 2.0/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>SZA is the GOAT and here's why (midterm)</title>
+        <title>SZA is the SUPAH GOAT and here's why (midterm)</title>
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <img src="Web 1920 – 1.jpg">
+        <div id="masthead">
+            <img src="Web 1920 – 1.jpg">
+        </div>
         <div id="content">
         <h1>Learn the ABC's of SZA's Stardom</h1>
         <h5>"The SOS singer has reached meteoric levels of success, but shhh—don’t tell her that.</h5>
