--- a/Midterm 2.0/index.html
+++ b/Midterm 2.0/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--This is for my midterm-->
     <head>
         <title>SZA is the SUPAH GOAT and here's why (midterm)</title>
         <link rel="stylesheet" href="stylesheet.css">
@@ -34,6 +35,14 @@
         <p>She seems more caught up in the heaviness of the crown than its shiny jewels. There’s also a sort of mistrust of fame inside her that’s causing her to be apprehensive about putting too much security in the concept that, in all fairness, is known to be fleeting. “It’s all really fickle....Had the first three shows of my tour gone poorly, would the rest of my dates have been sold out? Would those people be outside waiting in line by the time we got to L.A.? No. All it takes is, what, three poorly shot TikTok videos to basically decide that this tour is not worth coming to see,” she tells me matter-of-factly. “I know that people don’t love me because love is really unconditional, and I’m one scandal away from being canceled indefinitely like anyone else. I’m grateful that they like my art and that it speaks to them, and it connects and tethers all of us together in this weird way. It’s dope, but it’s also still a string that could be cut at any moment. Literally, sometimes there’s no rhyme or reason to it. Remember Susan Boyle? Like, what if I’m Susan Boyle?!”</p>
         <p>SZA and I are seated at a table across from each other inside a suite at the Chamberlin West Hollywood hotel. It is the first Monday after the first leg of her tour wrapped, and she is already back on the grind. She has just come from a fitting with stylist Patti Wilson for the ELLE photo shoot, which is scheduled to take place the following morning, and is regretfully missing the iHeartRadio Music Awards to make time for our interview. “I couldn’t do both that and this. I need time to prepare myself to be perceived…like I need to mentally prepare,” she explains. And she doesn’t mean this in a Diva™ way. It’s more about her internal struggle. “Some people think that, like, me having anxiety or me being shy or struggling with self-esteem is an act,” SZA says. “I’m just, dead-ass, a person. Everybody else has feelings and fears. Why wouldn’t I be scared to be famous? Would you be scared to be famous? Because I’m famous, I’m not allowed to be scared? I wasn’t born famous. I had regular quiet-ass parents from a small town like everybody else. And I guess at some point I’m supposed to acclimate to all of this?”</p>
         <p>It was a little after 8:30 P.M. when she showed up to the suite, and I could tell by the way she took off her shoes and kicked her feet up on a chair that she was thankful for a moment to sit back and chill. She arrived eating a Shake Shack burger that she’d been trying to finish for a while. The fitting had gone longer than expected. “I hate trying on clothes,” she admits. “I don’t shop anywhere. I just wear whatever is free in my mail. I’m like, ‘Is it an extra large? Great.’” (“If I can feel like I’m under a blanket when I’m outside, that’s ideal,” she adds.)</p>
+        <iframe
+            style="border-radius:12px"
+            src="https://open.spotify.com/embed/album/07w0rG5TETcyihsEIZR3qG?utm_source=g
+            enerator"
+            width="100%" height="352" frameBorder="0" allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen;
+            picture-in-picture" loading="lazy"></iframe>
+        <!--making the picture look right was tricky. Also, the spotify embed was easier than I thought.-->
         <img src="sza3.jpg" width="500px">
         <h6>Jacket, Mowalola, $1,150. Skirt, Miaou, $215. Necklace, Tiffany & Co., $3,500. Rings, Bulgari. (Source: Renell Medrano)</h6>
         <p>On the rare occasion SZA feels like dressing up to go out, she focuses on accentuating her favorite accessory: “I treat my butt like a purse,” she says with a slight smile. “It’s just there to enhance whatever else. And that’s why I paid for it, because it works all by itself.” The singer hinted that she’d had a Brazilian butt lift on the intro of her SOS album. “That ass so fat, it look natural / It’s not,” the 33-year-old raps. In our conversation, she makes sure to note that the decision to have the surgery was hers alone. “I always wanted a really fat ass with less gym time,” she says. “I didn’t succumb to industry pressure. I succumbed to my own eyes in the mirror and being like, No, I need some more ass.” I ask her about her decision to rap her way through that entire track—a first for her. She kind of shrugs before declaring, “That’s some Jersey shit. You know what I’m saying? When I feel like I have too much to say and I don’t want to say it cute.”</p>
@@ -49,7 +58,7 @@
         <p>At the time SZA was signed, Kendrick Lamar was TDE’s flagship artist thanks to his 2012 mega hit album Good Kid, M.A.A.D City. SZA’s addition as the literal first lady of the male-dominated label that consisted mostly of rappers who—like Lamar, Henderson, and TDE co-founder Anthony “Top Dog” Tiffith—were from LA, felt like an odd choice. “I’ve been on a championship team and people know I’m not a bad player, but I don’t know if anybody thought I was giving, starting player or MVP,” SZA says. “I didn’t know that I was going to get my opportunity. Now that I have, I’m like, ‘Let me get my playing shoes on, and I need six Gatorades, and then we are going to get to it.’”</p>
         <p>SZA’s scrappy nature managed to prevail over the inevitable bumps that come along with acclimating oneself to a new team. Brick by brick, hit by hit, SZA has shown and proved her way to becoming a top artist for both TDE and her parent label RCA. And with Lamar’s recent departure in 2021, there’s no question that she’s her primary label’s frontrunner.</p>
         <p>Getting the respect she deserves for the points she has put on the board matters more to SZA than being liked or popular. “I try not to care too much because I really had some deep disappointments when I would just be so invested. But I can’t invest because none of it is real. Even if I win a bunch of Grammys, that shit doesn’t matter. It would be so cool. But also I would not be surprised at all if I didn’t win any [more]. Because that’s just how shit goes. But that’s why the tour matters to me. ‘Cause it’s like, No, we packed out these stadiums all over the country and that was real. That’s why I can’t let up, because at the end of the day it was like, yeah, [whatever haters say] is good and well, but just make sure you add, we have sold-out dates in all arenas. Make sure you tell them that we sold out the Forum twice and we could have done it four times. Make sure you tell them that I was in the air, and that my mic was on.”</p>
-
+            <!--Pullquote in action below!-->
         <h3>An ambitious live show</h3>
         <div id="pullquotefloat">"These are powerful songs that really require an amazing performance out of her musically. She’s got to do that while she’s doing choreo, navigating set changes, and the physicality of the performance space, all while looking beautiful and like she’s having a great time. She navigates all of those challenges so well that the show just feels seamless. She’s a fighter who is serious about her performance. She’s also her toughest critic."</div>
         <p>There’s no denying that SZA has put her all into this tour. That night at the Forum, she opened singing from a diving board with a moving cube-like set of digital screens imitating ocean waves, à la her SOS album cover (a re-creation of an iconic 1997 photo of Princess Diana, taken shortly before her death). Fans were then taken on a theatrical-esque journey with big budget sets, including a ship that appears almost magically on stage at one point, and gorgeous arrangements of her catalog.</p>
@@ -67,15 +76,6 @@
 
 <h6>Hair by Malcolm Marquez at OPUS Beauty; makeup by Deanna Paley; manicure by Chaun Legend for The Only Agency; set design by Daniel Horowitz at Jones MGMT; produced by Carina Mak at Ice Studios.</h6>
 <h6>This article appears in the June/July 2023 issue of ELLE."</h6>
-
-<iframe
-style="border-radius:12px"
-src="https://open.spotify.com/embed/album/07w0rG5TETcyihsEIZR3qG?utm_source=g
-enerator"
-width="100%" height="352" frameBorder="0" allowfullscreen=""
-allow="autoplay; clipboard-write; encrypted-media; fullscreen;
-picture-in-picture" loading="lazy"></iframe>
-
 
     <li>
         <a href="https://www.elle.com/fashion/a44109424/project-runway-season-20-cast-all-star-design
