--- a/Bootstrap-template/index.html
+++ b/Bootstrap-template/index.html
@@ -122,7 +122,7 @@
     <div class="row">
     
       <div class="col-md-6">
-        <h2>This is bro</h2>
+        <h2>This is bro on that thang.</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
         <img src="https://images.unsplash.com/photo-1572776685600-aca8c3456337?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1502&q=80"
         width="100%" width-max="500px">
@@ -130,7 +130,7 @@
       </div>
   
       <div class="col-md-6">
-        <h2>Check out bro</h2>
+        <h2>Check out bro do his thang.</h2>
         <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
         <img src="https://images.unsplash.com/photo-1621544402532-78c290378588?ixid=MnwxMjA3fDB8MHxwa
         G90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80"
@@ -164,7 +164,7 @@
       </div>
     </div>
   </div>
-  <!--Grid ending-->
+  <!--Grid ending to end tings.-->
 
    <footer class="footer mt-auto py-3 bg-dark">
       <div class="container">
