All of this is for the sake of my Resume.

--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -2,9 +2,9 @@
 <html>
 
     <head>
-        <title>Bootstrap template</title>
+        <title>Aaron "A.C." Wright's Resume</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Merrill College of Journalism, UMD">
+        <meta name="description" content="#MerrillMade from UMD">
         <meta name="author" content="Aaron C. Wright">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
