--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -29,7 +29,7 @@
         <!-- Navbar start-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Aaron C. Wright's Resume!</a>
+            <a class="navbar-brand" href="#">Aaron C. Wright's Resume</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -53,6 +53,7 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Socials
+                  </a>
                   </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="https://www.linkedin.com/in/aaron-wright-a01b391a7/">LinkedIn</a></li>
