--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -51,7 +51,7 @@
                   <a class="nav-link" href="#">Works</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
                     Socials
                   </a>
                   </a>
