--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -72,7 +72,9 @@
   <img src="Banner.png" class="img-fluid" alt="This is the banner">
     <h1 class="display-5 fw-bold text-body-emphasis">About Me!</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world's most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <p class="Fjalla One">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional
+        and highly trained skills from each of these fields. With me on your team, you'll get a fantastic multimedia journalist and a better teammate.
+        I'll put you on fr!</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
       </div>
     </div>
