--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -80,23 +80,15 @@
   <!--Grid beginning-->
   <div class="container">
     <div class="row">
-  
-  
-      <div class="col-md-4">
-        <h3>Heading 1</h3>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+      <div class="col-md-6">
+        <img src="MarylandAaron.jpg" class="img-fluid" alt="This is a picture of Aaron with a taxidermied turtle">
       </div>
   
-      <div class="col-md-4">
-        <h3>Heading 2</h3>
+      <div class="col-md-6">
+        <h3 class="newsreader-regular">About Me</h3>
         <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
       </div>
   
-  
-      <div class="col-md-4">
-        <h3>Heading 3</h3>
-        <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-      </div>
     </div>
   </div>
   <!--Grid ending-->
