--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -66,7 +66,7 @@
   <!-- Hero start-->
  <div class="px-4 py-5 my-5 text-center">
   <img src="Banner.png" class="img-fluid" alt="This is the banner">
-    <h1 class="newsreader-regular">About Me!</h1>
+    <h1 class="newsreader-regular"></h1>
     <div class="col-lg-6 mx-auto">
       <p class="fjalla-one-regular">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional
         and highly trained skills from each of these fields. With me on your team, you'll get a fantastic multimedia journalist and a better teammate.
@@ -85,8 +85,8 @@
       </div>
   
       <div class="col-md-6">
-        <h3 class="newsreader-regular">About Me</h3>
-        <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
+        <h2 class="title">About Me!</h3>
+        <p></p>
       </div>
   
     </div>
