Cleaning up some code

--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -86,21 +86,13 @@
   
       <div class="col-md-6">
         <h2 class="title">About Me!</h3>
-        <p></p>
+        <p class="bodytext">A 2024 graduate from the University of Maryland, College Park, Aaron Carter Wright earned a degree in journalism and a certificate
+          in African American and Africana Studies.
+        </p>
       </div>
   
     </div>
   </div>
   <!--Grid ending-->
-
-  <style>
-    .bi {
-      font-size:3em;
-    }
-   
-    .col-md-4 {
-      text-align: center;
-    }
-   </style>
     </body>
 </html>
