--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -78,6 +78,7 @@
   <!-- Hero end-->
 
   <!--Grid beginning-->
+  <!--This section of my code will have multiple containers in order to ensure separation of information and content. Peep game!-->
   <div class="container">
     <div class="row">
       <div class="col-md-6">
@@ -87,7 +88,11 @@
       <div class="col-md-6">
         <h2 class="title">About Me!</h3>
         <p class="bodytext">A 2024 graduate from the University of Maryland, College Park, Aaron Carter Wright earned a degree in journalism and a certificate
-          in African American and Africana Studies.
+          in African American and Africana Studies. As you scroll through his resume, you'll see a multimedia-skilled journalist and a capable leader,
+          which has its roots from being an Eagle Scout. Outside of journalism, Aaron is an avid Blerd/geek (Black nerd, for the uninitiated), having a wide range
+          of interests and knowledge in anime, astronomy, comics, manga, model-kit building (Legos and Gundam), movies, television and video games. He's also a lifelong
+          reader, a fan of trivia, a staunch media critic and advocate for civil and human rights: domestic or international. 
+          If you see me, ask me about African Diasporic Martial Arts!
         </p>
       </div>
   
