--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -66,7 +66,7 @@
   <!-- Hero start-->
  <div class="px-4 py-5 my-5 text-center">
   <img src="Banner.png" class="img-fluid" alt="This is the banner">
-    <h1 class="newsreader-regular"></h1>
+    <h1 class="newsreader-regular">Aaron Wright's Resume!</h1>
     <div class="col-lg-6 mx-auto">
       <p class="fjalla-one-regular">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional
         and highly trained skills from each of these fields. With me on your team, you'll get a fantastic multimedia journalist and a better teammate.
@@ -86,7 +86,7 @@
       </div>
   
       <div class="col-md-6">
-        <h2 class="title">About Me!</h3>
+        <h2 class="title">About Me!</h2>
         <p class="bodytext">A 2024 graduate from the University of Maryland, College Park, Aaron Carter Wright earned a degree in journalism and a certificate
           in African American and Africana Studies. As you scroll through his resume, you'll see a multimedia-skilled journalist and a capable leader,
           which has its roots from being an Eagle Scout. Outside of journalism, Aaron is an avid Blerd/geek (Black nerd, for the uninitiated), having a wide range
