Can't fix the title :(

--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -86,7 +86,7 @@
       </div>
   
       <div class="col-md-6">
-        <h2 class="title">About Me!</h2>
+        <h2 class="newsreader-regular">About Me!</h2>
         <p class="bodytext">A 2024 graduate from the University of Maryland, College Park, Aaron Carter Wright earned a degree in journalism and a certificate
           in African American and Africana Studies. As you scroll through his resume, you'll see a multimedia-skilled journalist and a capable leader,
           which has its roots from being an Eagle Scout. Outside of journalism, Aaron is an avid Blerd/geek (Black nerd, for the uninitiated), having a wide range
