--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -95,7 +95,15 @@
           If you see me, ask me about African Diasporic Martial Arts!
         </p>
       </div>
-  
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <h2 class="newsreader-regular">Education</h2>
+      <p class="bodytext">
+        
+      </p>
     </div>
   </div>
   <!--Grid ending-->
