--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -26,7 +26,7 @@
         <!-- Navbar start-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Aaron C. Wright's Resume</a>
+            <a class="navbar-brand" href="#">Aaron Wright's Resume</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,7 +44,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Skills</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item-special">
                   <a class="nav-link" href="#">Works</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -102,7 +102,7 @@
     <div class="row">
       <h2 class="newsreader-regular">Education</h2>
       <p class="bodytext">
-        
+
       </p>
     </div>
   </div>
