--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -101,9 +101,8 @@
   <div class="container">
     <div class="row">
       <h2 class="newsreader-regular">Education</h2>
-      <p class="bodytext">
-
-      </p>
+      <li class="bodytext">Bachelor of Arts, Journalism, University of Maryland, 2024</li>
+      <li class="bodytext">Certificate in African American and Africana Studies, University of Maryland, 2024</li>
     </div>
   </div>
   <!--Grid ending-->
