--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -100,9 +100,21 @@
 
   <div class="container">
     <div class="row">
-      <h2 class="newsreader-regular">Education</h2>
-      <li class="bodytext">Bachelor of Arts, Journalism, University of Maryland, 2024</li>
-      <li class="bodytext">Certificate in African American and Africana Studies, University of Maryland, 2024</li>
+      <h1 class="newsreader-regular">Education</h2>
+      <ul class="bodytext">
+        <li class="bodytext">Bachelor of Arts, Journalism, University of Maryland, 2024</li>
+        <li class="bodytext">Certificate in African American and Africana Studies, University of Maryland, 2024</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <h1 class="newsreader-regular">Experience</h1>
+      <ul class="bodytext">
+        <li></li>
+
+      </ul>
     </div>
   </div>
   <!--Grid ending-->
