This might just fix the container.

--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -112,7 +112,13 @@
     <div class="row">
       <h1 class="newsreader-regular">Experience</h1>
       <ul class="bodytext">
-        <li></li>
+        <li>
+          <h2 class="fjalla-one-regular">Newsroom Intern</div>
+          <div class="organization">The Fauquier Times</div>
+          <div class="date">August 2023</div>
+          <p class="description">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
+              reported on education, agriculture and wrote a lifestyle feature story on a local brewery</p>
+        </li>
 
       </ul>
     </div>
