Trying out the title, now.

--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -110,7 +110,7 @@
 
   <div class="container">
     <div class="row">
-      <h1 class="newsreader-regular">Experience</h1>
+      <h1 class="title">Experience</h1>
       <ul class="bodytext">
         <li>
           <h2 class="fjalla-one-regular">Newsroom Intern</div>
