--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">About Me.</a>
+                  <a class="nav-link active" aria-current="page" href="#about-me">About Me.</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Education</a>
@@ -85,7 +85,7 @@
         <img src="MarylandAaron.jpg" class="img-fluid" alt="This is a picture of Aaron with a taxidermied turtle">
       </div>
   
-      <div class="col-md-6">
+      <div class="col-md-6" id="about-me">
         <h1 class="title">About Me.</h1>
         <p class="bodytext">A 2024 graduate from the University of Maryland, College Park, Aaron Carter Wright earned a degree in journalism and a certificate
           in African American and Africana Studies. As you scroll through his resume, you'll see a multimedia-skilled journalist and a capable leader,
