--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -36,16 +36,16 @@
                   <a class="nav-link active" aria-current="page" href="#about-me">About Me.</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Education</a>
+                  <a class="nav-link" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Experience</a>
+                  <a class="nav-link" href="#experience">Experience</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Skills</a>
+                  <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item-special">
-                  <a class="nav-link" href="#">Works</a>
+                  <a class="nav-link" href="#works">Works</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">
@@ -99,7 +99,7 @@
   </div>
 
   <div class="container">
-    <div class="row">
+    <div class="row" id="education">
       <h1 class="title">Education</h2>
       <ul class="bodytext">
         <li class="bodytext">Bachelor of Arts, Journalism, University of Maryland, 2024</li>
@@ -109,7 +109,7 @@
   </div>
 
   <div class="container">
-    <div class="row">
+    <div class="row" id="education">
       <h1 class="title">Experience</h1>
       <ul class="bodytext">
         <li>
