--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -109,7 +109,7 @@
   </div>
 
   <div class="container">
-    <div class="row" id="education">
+    <div class="row" id="experience">
       <h1 class="title">Experience</h1>
       <ul class="bodytext">
         <li>
