--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -113,11 +113,11 @@
       <h1 class="title">Experience</h1>
       <ul class="bodytext">
         <li>
-          <h2 class="fjalla-one-regular">Newsroom Intern</div>
-          <div class="organization">The Fauquier Times</div>
-          <div class="date">August 2023</div>
-          <p class="description">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
-              reported on education, agriculture and wrote a lifestyle feature story on a local brewery</p>
+          <h2 class="newsreader-regular">Newsroom Intern</div>
+          <div class="fjalla-one-regular">The Fauquier Times</div>
+          <div class="fjalla-one-regular">August 2023</div>
+          <p class="fjalla-one-regular">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
+          reported on education, agriculture and wrote a lifestyle feature story on a local brewery</p>
         </li>
 
       </ul>
