--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -111,16 +111,14 @@
   <div class="container">
     <div class="row" id="experience">
       <h1 class="title">Experience</h1>
-      <ul class="bodytext">
-        <li>
-          <h2 class="newsreader-regular">Newsroom Intern</div>
-          <div class="fjalla-one-regular">The Fauquier Times</div>
-          <div class="fjalla-one-regular">August 2023</div>
-          <p class="fjalla-one-regular">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
-          reported on education, agriculture and wrote a lifestyle feature story on a local brewery</p>
-        </li>
+      <div class="bodytext">
+        <h2 class="newsreader-regular">Newsroom Intern</div>
+        <div class="fjalla-one-regular">The Fauquier Times</div>
+        <div class="fjalla-one-regular">August 2023</div>
+        <p class="fjalla-one-regular">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
+        reported on education, agriculture and wrote a lifestyle feature story on a local brewery</p>
+      </div>
 
-      </ul>
     </div>
   </div>
   <!--Grid ending-->
