--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -26,7 +26,7 @@
         <!-- Navbar start-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="Banner.png">Aaron Wright's Resume</a>
+            <a class="navbar-brand" href="#bannerhead">Aaron Wright's Resume</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -65,7 +65,7 @@
 
   <!-- Hero start-->
  <div class="px-4 py-5 my-5 text-center">
-  <img src="Banner.png" class="img-fluid" alt="This is the banner">
+  <img src="Banner.png" class="img-fluid" alt="This is the banner" id="bannerhead">
     <h1 class="title">Aaron Wright's Resume!</h1>
     <div class="col-lg-6 mx-auto">
       <p class="fjalla-one-regular">With works across digital, print and audio, I'm a journalist that has dabbled in a lot of fields, yet retains professional
