--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -119,6 +119,13 @@
         reported on education, agriculture and wrote a lifestyle feature story on a local brewery</p>
       </div>
 
+      <div class="bodytext">
+        <h2 class="newsreader-regular">Newsroom Intern</h2>
+        <div class="fjalla-one-regular">The Baltimore Banner</div>
+        <div class="fjalla-one-regular">June 2022 - August 2022</div>
+        <p class="fjalla-one-regular">As newsroom intern and part of the first Baltimore Banner internship cohort, I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
+      </div>
+
     </div>
   </div>
   <!--Grid ending-->
