--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -112,7 +112,7 @@
     <div class="row" id="experience">
       <h1 class="title">Experience</h1>
       <div class="bodytext">
-        <h2 class="newsreader-regular">Newsroom Intern</div>
+        <h2 class="newsreader-regular">Newsroom Intern</h2>
         <div class="fjalla-one-regular">The Fauquier Times</div>
         <div class="fjalla-one-regular">August 2023</div>
         <p class="fjalla-one-regular">The Fauquier Times is a hyperlocal newspaper located in Warrenton, Virginia. As a newsroom intern I,
