--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -126,6 +126,16 @@
         <p class="fjalla-one-regular">As newsroom intern and part of the first Baltimore Banner internship cohort, I reported on education, lifestyle, arts and culture and crime stories within the Baltimore area, learned great journalism insights from onstaff reporters through The Baltimore Banners Brown Bag Lunch, assisted with primary election coverage by interviewing Baltimore voters and helping the data team and I wrote a separate story on book deserts that got picked up and distributed by The Associated Press.</p>
       </div>
 
+      <div class="bodytext">
+        <h2 class="newsreader-regular">Journalist and Leader</h2>
+        <div class="fjalla-one-regular">The Black Explosion</div>
+        <div class="fjalla-one-regular">September 2021 - May 2024</div>
+        <p class="fjalla-one-regular">The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland by covering the stories that matter to the community. As a staff writer for the Black Explosion, I reported on various campus events and conducted interviews with students to create stories for Black UMD, delivered story pitches to editors for further consideration and photographed pictures for stories to use as graphics.</p>
+        <p class="fjalla-one-regular">In August, 2023, I was promoted to the role of Co-Editor-In-Chief. As an Editor-in-Chief, I lead pitch-and-staff meetings and created Google Slides for those meetings. I also assigned and edited news stories and distributed them from copy edits to engagement.</p>
+
+        <div class="fjalla-one-regular"></div>
+      </div>
+
     </div>
   </div>
   <!--Grid ending-->
