--- a/Resume Project/aaron-wright-resume.html
+++ b/Resume Project/aaron-wright-resume.html
@@ -132,8 +132,13 @@
         <div class="fjalla-one-regular">September 2021 - May 2024</div>
         <p class="fjalla-one-regular">The Black Explosion is the University of Marylands first and only Black newspaper since 1968. Sponsored by the Nyumburu Cultural Center, the Black Explosion has served to be a voice for the Black community in the University of Maryland by covering the stories that matter to the community. As a staff writer for the Black Explosion, I reported on various campus events and conducted interviews with students to create stories for Black UMD, delivered story pitches to editors for further consideration and photographed pictures for stories to use as graphics.</p>
         <p class="fjalla-one-regular">In August, 2023, I was promoted to the role of Co-Editor-In-Chief. As an Editor-in-Chief, I lead pitch-and-staff meetings and created Google Slides for those meetings. I also assigned and edited news stories and distributed them from copy edits to engagement.</p>
+      </div>
 
-        <div class="fjalla-one-regular"></div>
+      <div class="bodytext">
+        <h2 class="newsreader-regular">Staff Writer and Anchor</h2>
+        <div class="fjalla-one-regular">WMUC-FM Radio News</div>
+        <div class="fjalla-one-regular"> February 2021 - January 2023 </div>
+        <p class="fjalla-one-regular">WMUC Radio News is a student-run news program at the University of Maryland, broadcasting live from WMUC Radio 90.5-FM College Park. Through three radio news shows, student reporters cover a variety of news, including campus, sports, entertainment, and national news. As a member of WMUC-FM Radio News, I reported campus events and conducted interviews with students to create a piece by a given deadline, monitored social media trends for stories on Drop the Pop, created audio packages for future broadcast and anchored for Weekly Roundup.</p>
       </div>
 
     </div>
